--- a/etherpad/src/static/css/signin.less
+++ b/etherpad/src/static/css/signin.less
@@ -89,6 +89,23 @@ label.error {
   color: #fff;
 }
 
+.stek-button {
+  background-color: #F3AD0C !important;
+  text-align: center;
+  display: inherit;
+  height: auto;
+  padding: 5px;
+  border-radius: 25px;
+}
+
+.sign-in-paragraph {
+  color: #000;
+  font-size: 15px;
+  font-weight: 600;
+  min-width: 100%;
+  margin-bottom: -5px;
+}
+
 .google-signin-button,
 .fb-login-required,
 .stek-login-required{
