Change color and text in the header notifications to match the stek brand

--- a/etherpad/src/static/css/colors.less
+++ b/etherpad/src/static/css/colors.less
@@ -56,7 +56,7 @@
 @color_darker_bg_transparent: rgba(51, 51, 51, 0.97);
 
 @color_code: #979797;
-@color_button: #afbcb6;
+@color_button:#F3AD0C;
 @color_grey_text: #7da392;
 @color_border: #8ea098;
 @color_shadow: #e6eae7;
