--- a/etherpad/src/static/css/header3.less
+++ b/etherpad/src/static/css/header3.less
@@ -48,6 +48,12 @@ body > header #site-iphone-back {
     font-weight: bold;
     text-decoration: underline;
   }
+
+  .stek-promo-link {
+    color: #000;
+    font-weight: 500;
+    text-decoration: underline;
+  }
 }
 
 
