--- a/etherpad/src/themes/default/templates/header3.ejs
+++ b/etherpad/src/themes/default/templates/header3.ejs
@@ -50,8 +50,7 @@
     <div class="banner-close icon-x">
     </div>
     <div id="guest-banner-msg">
-      Hackpads are smart collaborative documents.
-      <a href="#join-hackpad">Join Hackpad Now</a>.
+      <p>Hackpads are collaborative documents. <a class="stek-promo-link" href="https://stek.io">Join Stek.io</a> for ultimate Hackpad pleasure!</p>
     </div>
   </div>
 
