Simple textual/styling change to match stek brand

--- a/etherpad/src/static/css/pro/account.less
+++ b/etherpad/src/static/css/pro/account.less
@@ -16,8 +16,9 @@
 #account-message {
   margin: 1em 0;
   padding: 1em;
-  background: #efe;
+  background: #F3AD0C;
   border: 1px solid #ccc;
+  color: #ffffff;
 /*  font-weight: bold;*/
 }
 
