Add mixpanel to environment variables + google analytics to the configuration file

--- a/etherpad/etc/etherpad.local.properties.tmpl
+++ b/etherpad/etc/etherpad.local.properties.tmpl
@@ -53,8 +53,8 @@ apnsCert.debug.certFile = __apns_p12_cert_file__
 apnsCert.debug.certPass = __apns_p12_cert_password__
 cdnUrl = __cdn_url__
 mixpanelToken = __mixpanel_token__
-googleAnalyticsAccount = __google_analytics_account__
-googleAnalyticsDomainName = __google_analytics_domain_name__
+googleAnalyticsAccount =  UA-82796677-3
+googleAnalyticsDomainName = hackpad.co
 defaultIdEncryptionKey = __default_id_encryption_key__
 accountIdEncryptionKey = __account_id_encryption_key__
 collectionIdEncryptionKey = __collection_id_encryption_key__
