Remove footer images and add stek.io link

--- a/etherpad/src/static/css/home_ejs.less
+++ b/etherpad/src/static/css/home_ejs.less
@@ -426,6 +426,10 @@ label.placeholder {
   margin-right: 50px;
 }
 
+.stek-footer-link {
+  color: #F3AD0C !important;
+}
+
 #try-it {
   display: inline-block;
   text-decoration: none !important;
