--- a/etherpad/src/themes/default/templates/signin.ejs
+++ b/etherpad/src/themes/default/templates/signin.ejs
@@ -169,7 +169,7 @@
   <% if (!session.proAccount) { %>
   <div id="connecting-to-facebook" class="modaldialog" style="padding:30px; margin-top: 100px">
     <img alt="" src="<%=helpers.cdn()%>/static/img/status-ball.gif" style="float:right" />
-    <span style="font-size:21px; color:#666">Signing in using Facebook...</span>
+    <span style="font-size:21px; color:#666">Signing in using Stek.io...</span>
     <div style="margin-top:20px"><%- template.use('button', null, { buttonType: 'submit', label: 'Cancel' }); %></div>
   </div>
   <% } %>
