Remove fb-login-required class from custom service button

--- a/etherpad/src/static/css/signin.less
+++ b/etherpad/src/static/css/signin.less
@@ -122,7 +122,7 @@ label.error {
 }
 
 .google-signin-button img,
-.fb-login-required img {
+.fb-login-required img, .stek-login-required img {
   height: 40px;
   vertical-align: top;
 }
@@ -266,7 +266,7 @@ label.error {
     }
 
     .google-signin-button img,
-    .fb-login-required img {
+    .fb-login-required img, .stek-login-required img {
       height: 20px;
       margin-top: 10px;
     }
@@ -276,7 +276,7 @@ label.error {
     }
 
     .google-signin-button,
-    .fb-login-required {
+    .fb-login-required, .stek-login-required {
       font-size: 12px;
     }
 
