--- a/etherpad/src/themes/default/templates/signin.ejs
+++ b/etherpad/src/themes/default/templates/signin.ejs
@@ -112,7 +112,7 @@
       <% } %>
 
       <% if (helpers.allowCustomServiceSignin()) { %>
-      <a id="login-facebook" class="fb-login-required stek-button" href="<%=serviceSignInUrl%>" >
+      <a class="stek-login-required stek-button" href="<%=serviceSignInUrl%>" >
         <p class="sign-in-paragraph">Sign in with </p>
         <img class="fb-connect-button" src="/static/img/stek-logo.png" style="width: 90%;height: auto;">
       </a>
