link to current github repo

--- a/etherpad/src/themes/default/templates/main/home.ejs
+++ b/etherpad/src/themes/default/templates/main/home.ejs
@@ -70,7 +70,7 @@ limitations under the License. */ %>
   <div id="collaborate">
 
     <h1>Collaborate <em>instantly</em></h1>
-    <h2>Hackpad has been Open Sourced. <a href="https://github.com/hackpad/openpad" style="color:white; text-decoration:underline;">Learn more</a>.</h2>
+    <h2>Hackpad has been Open Sourced. <a href="https://github.com/hackpad/hackpad" style="color:white; text-decoration:underline;">Learn more</a>.</h2>
     <div class="signin-button-container">
       <%- template.use('button', null, {
         id: 'hero-signin-button',
