Adding jdbc-parameters and processInbox variables

--- a/etherpad/etc/etherpad.local.properties.tmpl
+++ b/etherpad/etc/etherpad.local.properties.tmpl
@@ -9,7 +9,7 @@ etherpad.proAccounts = true
 etherpad.imgDefaultDomain = __public_accessable_cannonical_domain__
 etherpad.superUserEmailAddresses = __email_addresses_with_admin_access__
 etherpad.SQL_JDBC_DRIVER = com.mysql.jdbc.Driver
-etherpad.SQL_JDBC_URL = jdbc:mysql://__dbc_dbserver__:__dbc_dbport__/__dbc_dbname__
+etherpad.SQL_JDBC_URL = jdbc:mysql://__dbc_dbserver__:__dbc_dbport__/__dbc_dbname__?__dbc_parameters__
 etherpad.SQL_PASSWORD = __dbc_dbpass__
 etherpad.SQL_USERNAME = __dbc_dbuser__
 etherpad.SQL_REQUIRE_SSL = __dbc_require_ssl__
@@ -42,7 +42,7 @@ s3Region = __aws_region__
 solrHostPort = 127.0.0.1:9000
 solrOnly = false
 etherpad.syndicateChanges = true
-etherpad.processInbox = true
+etherpad.processInbox = __process_inbox__
 secureCookieKey = __secure_cookie_key__
 requestSigningSecret = __request_signing_secret__
 apnsCert.appStore.certFile = __apns_p12_cert_file__
