fix error message when reconnect doesnt work + link to stek support

--- a/etherpad/src/themes/default/templates/pad/editor_base.ejs
+++ b/etherpad/src/themes/default/templates/pad/editor_base.ejs
@@ -237,9 +237,7 @@
           </div>
           <div id="reconnect_advise">
             <p>
-              If this continues to happen, please <a target="_blank"
-                  href="/ep/support">let us know</a>
-              (opens in new window).
+              If this continues to happen, please reload the page in your browser, and if it still won't reconnect please <a target="_blank" href="http://support.stek.io">let us know</a> (opens in new window).
             </p>
           </div>
         </div>
@@ -269,7 +267,7 @@
           <div id="freakout_advise">
             <p>
               If this continues to happen, please <a target="_blank"
-                  href="/ep/support">let us know</a>
+                  href="http://support.stek.io">let us know</a>
               (opens in new window).
             </p>
           </div>
