added new config variables, 'support email' and 'custom name'

--- a/etherpad/etc/etherpad.local.properties.tmpl
+++ b/etherpad/etc/etherpad.local.properties.tmpl
@@ -28,8 +28,9 @@ useHttpsUrls = false
 useVirtualFileRoot = ./src
 theme = default
 etherpad.soffice = /usr/bin/soffice
-customBrandingName = Hackpad
+customBrandingName = __custom_branding_name__
 customEmailAddress = __custom_email_address__
+supportEmailAddress = __support_email_address__
 facebookClientId = __fb_id__
 facebookClientSecret = __fb_secret__
 smtpServer = __smtp_server__
