Show the user API keys in the account settings page

--- a/etherpad/src/themes/default/templates/pro/account/my-account.ejs
+++ b/etherpad/src/themes/default/templates/pro/account/my-account.ejs
@@ -73,6 +73,19 @@ limitations under the License. */ %>
       <% } %>
       </td></tr></table>
     </div>
+    <h2>API Key</h2>
+
+    <table>
+      <tr>
+        <th>Client ID:</th>
+        <td class="ti" data-click="highlight-input"><%- INPUT({type: 'text', readonly:'', name: '',  value: clientId}) %></td>
+      </tr>
+      <tr>
+        <th>Secret:</th>
+        <td class="ti" data-click="highlight-input"><%- INPUT({type: 'text', readonly:'', name: '', value: apiToken}) %></td>
+      </tr>
+
+    </table>
   </div>
 </div>
 
